syntax="proto3";

package dousheng.interaction.favorite;

//生成Go文件的包目录路径
option go_package="github.com/Go-To-Byte/DouSheng/interaction_service/apps/favorite";

import "github.com/Go-To-Byte/DouSheng/video_service/apps/video/pb/video.proto";

//定义视频点赞接口
service Service{
  // 点赞/取消点赞 操作
  rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse);
  // 获取喜欢列表
  rpc GetFavoriteList(GetFavoriteListRequest) returns (GetFavoriteListResponse);
  // 通过视频ID获取点赞数
  rpc GetFavoriteCountById(GetFavoriteCountByIdRequest) returns (GetfavoriteCountByIdResponse);
}

//定义 点赞/取消点赞 请求体 POST
message FavoriteActionRequest{
  //用户鉴权Token
  // @gotags: json:"token" form:"token" binding:"required" validate:"required"
  string token = 1 ;
  //视频id
  // @gotags: json:"video_id" form:"video_id" binding:"required" validate:"required"
  int64 video_id = 2;
  //1-点赞 2-取消点赞
  // @gotags: json:"action_type" form:"action_type" binding:"required" validate:"required"
  int64 action_type = 3;

}

//点赞信息Module
message FavoritePo {
  int64 id = 1  ;
  int64 user_id = 2 ;
  int64 video_id = 3 ;
}

//点赞操作响应体
message FavoriteActionResponse{
  // 可以携带一些额外属性
  // @gotags: json:"mate"
  map<string, string> mate = 1;
}

//获取喜欢列表请求体
message GetFavoriteListRequest{
  //用户id
  // @gotags: json:"user_id" form:"user_id" validate:"required" binding:"required"
  int64 user_id = 1 ;
  //用户鉴权token
  // @gotags: json:"token" form:"token" validate:"required" binding:"required"
  string token = 2 ;
}

//获取喜欢列表响应体
message GetFavoriteListResponse{
  repeated video.Video video_list = 5;
}

message GetFavoriteCountByIdRequest{
  int64 video_id = 1;
}
message GetfavoriteCountByIdResponse{
  int64 favorite_count = 1;
}